# argus

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_parent.json
argus/: __init__.py  api.py  benchmark.py  chunking.py  cli.py  evaluation.py  generator.py  llm.py  mapping.py  models.py  pdf.py  report.py  retrieval.py
samples/: batch_input.jsonl  ecommerce.json  itsupport.json  medical.json  robotics.json
tests/: test_benchmark.py  test_generator.py
